# ips-nequip

./: README.md  pyproject.toml
.github/workflows/: publish.yaml  test.yaml
ips_nequip/: __init__.py  nequip.py
tests/integration/: conftest.py  test_i_nequip.py
